--- a/index.html
+++ b/index.html
@@ -1,28 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>M. Amirrul Mukminin - Portfolio</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Amirrul Mukminin | Data Entry Portfolio</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #f0f4f8;
       margin: 0;
-      padding: 0;
+      font-family: Arial, sans-serif;
+      background-color: #f2f2f2;
     }
-    .container {
+    header {
+      background-color: #ffffff;
+      padding: 40px 20px;
+      text-align: center;
+      position: relative;
+    }
+    header img {
+      max-width: 220px;
+      border-radius: 10px;
+    }
+    header h1 {
+      font-size: 48px;
+      color: #e4572e;
+      margin: 10px 0;
+      letter-spacing: 2px;
+    }
+    header h2 {
+      font-size: 16px;
+      color: #333;
+      font-weight: normal;
+      margin-top: 10px;
+    }
+    header p {
+      font-size: 14px;
+      color: #666;
+      margin-top: 15px;
+    }
+    main {
       max-width: 800px;
       margin: 40px auto;
       background: #fff;
       padding: 30px;
       border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      box-shadow: 0 0 10px rgba(0,0,0,0.05);
     }
-    h1, h3 {
+    h3 {
       color: #007acc;
     }
     ul {
+      padding-left: 20px;
       line-height: 1.8;
     }
     a {
@@ -32,13 +59,25 @@
     a:hover {
       text-decoration: underline;
     }
+    .footer {
+      background-color: #e4572e;
+      color: white;
+      padding: 10px 0;
+      text-align: center;
+      font-weight: bold;
+    }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>M. Amirrul Mukminin</h1>
-    <p>Hello! I’m a Computer Science student from UiTM with a passion for web development, design, and digital work.</p>
 
+  <header>
+    <img src="https://i.imgur.com/26Cv8T3.png" alt="Amirrul Mukminin">
+    <h1>DATA ENTRY</h1>
+    <h2>EXCEL DATA ENTRY | GOOGLE SHEETS MANAGEMENT | PDF TO EXCEL CONVERSION</h2>
+    <p>AMIRRUL MUKMININ<br>@miyocanvastudio</p>
+  </header>
+
+  <main>
     <h3>💡 Skills</h3>
     <ul>
       <li>HTML & CSS (Responsive Web Design)</li>
@@ -52,7 +91,10 @@
     <p>Click here to view my work samples: <a href="https://drive.google.com/drive/folder/your-link-here" target="_blank">My Portfolio Folder</a></p>
 
     <h3>📬 Contact</h3>
-    <p>Email: amirrul@example.com<br/>Location: Dungun, Terengganu, Malaysia</p>
-  </div>
+    <p>Email: amirrul@example.com<br>Location: Dungun, Terengganu, Malaysia</p>
+  </main>
+
+  <div class="footer">Your satisfaction fuels my commitment!</div>
+
 </body>
 </html>
