--- a/index.html
+++ b/index.html
@@ -3,98 +3,125 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Amirrul Mukminin | Data Entry Portfolio</title>
+  <title>Amirrul Mukminin | Digital Services</title>
   <style>
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #f2f2f2;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+      background-color: #1d1d1f;
+      color: #f5f5f7;
     }
     header {
-      background-color: #ffffff;
-      padding: 40px 20px;
       text-align: center;
-      position: relative;
+      padding: 80px 20px 40px;
     }
     header img {
-      max-width: 220px;
-      border-radius: 10px;
+      width: 220px;
+      border-radius: 12px;
+      margin-bottom: 20px;
     }
     header h1 {
-      font-size: 48px;
-      color: #e4572e;
-      margin: 10px 0;
-      letter-spacing: 2px;
-    }
-    header h2 {
-      font-size: 16px;
-      color: #333;
-      font-weight: normal;
-      margin-top: 10px;
+      font-size: 40px;
+      font-weight: 600;
+      margin: 0;
     }
     header p {
-      font-size: 14px;
-      color: #666;
-      margin-top: 15px;
+      font-size: 18px;
+      color: #86868b;
+      margin: 10px 0 30px;
     }
-    main {
-      max-width: 800px;
-      margin: 40px auto;
-      background: #fff;
-      padding: 30px;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.05);
+    .section {
+      max-width: 900px;
+      margin: auto;
+      padding: 40px 20px;
+      border-bottom: 1px solid #333;
     }
-    h3 {
-      color: #007acc;
+    .section h2 {
+      font-size: 28px;
+      margin-bottom: 20px;
     }
-    ul {
-      padding-left: 20px;
-      line-height: 1.8;
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 20px;
+    }
+    .grid-item {
+      background-color: #2c2c2e;
+      border-radius: 12px;
+      padding: 20px;
+      text-align: center;
+    }
+    .grid-item h3 {
+      color: #fff;
+      margin-bottom: 10px;
     }
     a {
-      color: #007acc;
+      color: #0a84ff;
       text-decoration: none;
     }
     a:hover {
       text-decoration: underline;
     }
-    .footer {
-      background-color: #e4572e;
-      color: white;
-      padding: 10px 0;
+    footer {
       text-align: center;
-      font-weight: bold;
+      padding: 30px 20px;
+      color: #86868b;
+      font-size: 14px;
     }
   </style>
 </head>
 <body>
 
   <header>
-    <img src="https://i.imgur.com/26Cv8T3.png" alt="Amirrul Mukminin">
-    <h1>DATA ENTRY</h1>
-    <h2>EXCEL DATA ENTRY | GOOGLE SHEETS MANAGEMENT | PDF TO EXCEL CONVERSION</h2>
-    <p>AMIRRUL MUKMININ<br>@miyocanvastudio</p>
+    <img src="your-image-url-here" alt="Amirrul Mukminin">
+    <h1>Amirrul Mukminin</h1>
+    <p>Excel Data Entry | PDF Conversion | Canva & Web Design</p>
   </header>
 
-  <main>
-    <h3>💡 Skills</h3>
-    <ul>
-      <li>HTML & CSS (Responsive Web Design)</li>
-      <li>Typing (50+ WPM)</li>
-      <li>Canva Design – Posters, Social Media</li>
-      <li>Video & Photo Editing</li>
-      <li>Data Entry – PDF to Word/Excel</li>
-    </ul>
+  <section class="section">
+    <h2>About Me</h2>
+    <p>I’m a Computer Science student from UiTM who provides efficient digital services like data entry, web design, and typing. I’m dedicated, fast, and quality-focused in every task.</p>
+  </section>
 
-    <h3>📁 Portfolio</h3>
-    <p>Click here to view my work samples: <a href="https://drive.google.com/drive/folder/your-link-here" target="_blank">My Portfolio Folder</a></p>
+  <section class="section">
+    <h2>My Services</h2>
+    <div class="grid">
+      <div class="grid-item">
+        <h3>📊 Data Entry</h3>
+        <p>Excel, Google Sheets, and form conversion.</p>
+      </div>
+      <div class="grid-item">
+        <h3>🖋️ Typing</h3>
+        <p>Fast typing (50+ WPM), accurate & clean documents.</p>
+      </div>
+      <div class="grid-item">
+        <h3>🎨 Canva Design</h3>
+        <p>Posters, Instagram graphics, and clean layouts.</p>
+      </div>
+      <div class="grid-item">
+        <h3>💻 Web Design</h3>
+        <p>HTML & CSS responsive websites for personal use.</p>
+      </div>
+    </div>
+  </section>
 
-    <h3>📬 Contact</h3>
-    <p>Email: amirrul@example.com<br>Location: Dungun, Terengganu, Malaysia</p>
-  </main>
+  <section class="section">
+    <h2>Portfolio</h2>
+    <p>Check out my work samples here:
+      <a href="https://drive.google.com/drive/folder/your-link-here" target="_blank">My Portfolio Folder</a>
+    </p>
+  </section>
 
-  <div class="footer">Your satisfaction fuels my commitment!</div>
+  <section class="section">
+    <h2>Contact</h2>
+    <p>Email: amirrul@example.com</p>
+    <p>Location: Dungun, Terengganu, Malaysia</p>
+  </section>
+
+  <footer>
+    Your satisfaction fuels my commitment!<br>
+    &copy; 2025 Amirrul Mukminin
+  </footer>
 
 </body>
 </html>
