--- a/index.html
+++ b/index.html
@@ -5,15 +5,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Amirrul Mukminin | Digital Services</title>
   <style>
+    :root {
+      --bg-color: #f5f5f7;
+      --text-color: #1d1d1f;
+      --card-bg: #ffffff;
+    }
+    body.dark-mode {
+      --bg-color: #1d1d1f;
+      --text-color: #f5f5f7;
+      --card-bg: #2c2c2e;
+    }
     body {
       margin: 0;
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-      background-color: #1d1d1f;
-      color: #f5f5f7;
+      background-color: var(--bg-color);
+      color: var(--text-color);
+      transition: all 0.3s ease;
     }
     header {
       text-align: center;
-      padding: 80px 20px 40px;
+      padding: 60px 20px 30px;
+      position: relative;
     }
     header img {
       width: 220px;
@@ -21,23 +33,34 @@
       margin-bottom: 20px;
     }
     header h1 {
-      font-size: 40px;
+      font-size: 36px;
       font-weight: 600;
       margin: 0;
     }
     header p {
       font-size: 18px;
       color: #86868b;
-      margin: 10px 0 30px;
+      margin-top: 10px;
+    }
+    .theme-toggle {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      background: none;
+      border: 2px solid var(--text-color);
+      color: var(--text-color);
+      border-radius: 30px;
+      padding: 6px 12px;
+      cursor: pointer;
     }
     .section {
       max-width: 900px;
       margin: auto;
       padding: 40px 20px;
-      border-bottom: 1px solid #333;
+      border-bottom: 1px solid #ccc;
     }
     .section h2 {
-      font-size: 28px;
+      font-size: 26px;
       margin-bottom: 20px;
     }
     .grid {
@@ -46,17 +69,22 @@
       gap: 20px;
     }
     .grid-item {
-      background-color: #2c2c2e;
+      background-color: var(--card-bg);
       border-radius: 12px;
       padding: 20px;
       text-align: center;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+    .grid-item:hover {
+      transform: scale(1.05);
+      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
     }
     .grid-item h3 {
-      color: #fff;
+      color: var(--text-color);
       margin-bottom: 10px;
     }
     a {
-      color: #0a84ff;
+      color: #007aff;
       text-decoration: none;
     }
     a:hover {
@@ -65,18 +93,29 @@
     footer {
       text-align: center;
       padding: 30px 20px;
-      color: #86868b;
       font-size: 14px;
+      color: #86868b;
+    }
+    iframe, video {
+      display: block;
+      margin: 30px auto;
+      max-width: 90%;
+      border-radius: 10px;
     }
   </style>
 </head>
 <body>
 
+  <button class="theme-toggle" onclick="toggleTheme()">Toggle Theme</button>
+
   <header>
-    <img src="your-image-url-here" alt="Amirrul Mukminin">
+    <img src="https://i.imgur.com/26Cv8T3.png" alt="Amirrul Mukminin">
     <h1>Amirrul Mukminin</h1>
     <p>Excel Data Entry | PDF Conversion | Canva & Web Design</p>
   </header>
+
+  <!-- Intro Video Embed (optional to autoplay later) -->
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/ia2Ph61bYzc?autoplay=1&mute=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
   <section class="section">
     <h2>About Me</h2>
@@ -122,6 +161,12 @@
     Your satisfaction fuels my commitment!<br>
     &copy; 2025 Amirrul Mukminin
   </footer>
+
+  <script>
+    function toggleTheme() {
+      document.body.classList.toggle('dark-mode');
+    }
+  </script>
 
 </body>
 </html>
