--- a/index.html
+++ b/index.html
@@ -27,31 +27,25 @@
       padding: 60px 20px 30px;
       position: relative;
     }
-    header img {
-      width: 220px;
-      border-radius: 12px;
-      margin-bottom: 20px;
-    }
     header h1 {
-      font-size: 36px;
-      font-weight: 600;
-      margin: 0;
+      font-size: 42px;
+      font-weight: 700;
+      margin: 0 0 10px;
     }
     header p {
       font-size: 18px;
       color: #86868b;
-      margin-top: 10px;
+      margin-top: 0;
     }
     .theme-toggle {
       position: absolute;
       top: 20px;
       right: 20px;
       background: none;
-      border: 2px solid var(--text-color);
-      color: var(--text-color);
-      border-radius: 30px;
-      padding: 6px 12px;
+      border: none;
+      font-size: 24px;
       cursor: pointer;
+      color: var(--text-color);
     }
     .section {
       max-width: 900px;
@@ -106,15 +100,13 @@
 </head>
 <body>
 
-  <button class="theme-toggle" onclick="toggleTheme()">Toggle Theme</button>
+  <button class="theme-toggle" onclick="toggleTheme()" id="themeButton">🌙</button>
 
   <header>
-    <img src="https://i.imgur.com/26Cv8T3.png" alt="Amirrul Mukminin">
-    <h1>Amirrul Mukminin</h1>
+    <h1>Welcome to Portfolio Amirrul Mukminin</h1>
     <p>Excel Data Entry | PDF Conversion | Canva & Web Design</p>
   </header>
 
-  <!-- Intro Video Embed (optional to autoplay later) -->
   <iframe width="560" height="315" src="https://www.youtube.com/embed/ia2Ph61bYzc?autoplay=1&mute=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
   <section class="section">
@@ -164,7 +156,14 @@
 
   <script>
     function toggleTheme() {
-      document.body.classList.toggle('dark-mode');
+      const body = document.body;
+      const button = document.getElementById('themeButton');
+      body.classList.toggle('dark-mode');
+      if (body.classList.contains('dark-mode')) {
+        button.textContent = '☀️';
+      } else {
+        button.textContent = '🌙';
+      }
     }
   </script>
 
