--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
       --bg-color: #f5f5f7;
       --text-color: #1d1d1f;
       --card-bg: #ffffff;
+      --button-bg: #ffffff;
+      --button-text: #1d1d1f;
     }
     body.dark-mode {
       --bg-color: #1d1d1f;
       --text-color: #f5f5f7;
       --card-bg: #2c2c2e;
+      --button-bg: #2c2c2e;
+      --button-text: #f5f5f7;
     }
     body {
       margin: 0;
@@ -41,11 +45,22 @@
       position: absolute;
       top: 20px;
       right: 20px;
-      background: none;
+      background-color: var(--button-bg);
       border: none;
-      font-size: 24px;
+      font-size: 22px;
       cursor: pointer;
-      color: var(--text-color);
+      color: var(--button-text);
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.15);
+      transition: all 0.3s ease;
+    }
+    .theme-toggle:hover {
+      transform: scale(1.1);
     }
     .section {
       max-width: 900px;
@@ -159,11 +174,7 @@
       const body = document.body;
       const button = document.getElementById('themeButton');
       body.classList.toggle('dark-mode');
-      if (body.classList.contains('dark-mode')) {
-        button.textContent = '☀️';
-      } else {
-        button.textContent = '🌙';
-      }
+      button.textContent = body.classList.contains('dark-mode') ? '☀️' : '🌙';
     }
   </script>
 
