--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       font-size: 18px;
       color: #86868b;
       margin-top: 0;
+      min-height: 28px;
     }
     .theme-toggle {
       position: fixed;
@@ -120,10 +121,11 @@
 
   <header>
     <h1>Welcome to Portfolio Amirrul Mukminin</h1>
-    <p>Excel Data Entry | PDF Conversion | Canva & Web Design</p>
+    <p></p>
   </header>
 
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/ia2Ph61bYzc?autoplay=1&mute=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+  <!-- YouTube audio-only embed -->
+  <iframe width="0" height="0" src="https://www.youtube.com/embed/ia2Ph61bYzc?autoplay=1&mute=0&loop=1&playlist=ia2Ph61bYzc" frameborder="0" allow="autoplay"></iframe>
 
   <section class="section">
     <h2>About Me</h2>
