--- a/index.html
+++ b/index.html
@@ -113,6 +113,12 @@
       max-width: 90%;
       border-radius: 10px;
     }
+    img.hero {
+      display: block;
+      margin: 30px auto;
+      max-width: 100%;
+      border-radius: 12px;
+    }
   </style>
 </head>
 <body>
@@ -123,6 +129,9 @@
     <h1>Welcome to Portfolio Amirrul Mukminin</h1>
     <p></p>
   </header>
+
+  <!-- Display image -->
+  <img src="https://i.imgur.com/0ZXkk0T.png" alt="Amirrul Mukminin" class="hero">
 
   <!-- YouTube audio-only embed -->
   <iframe width="0" height="0" src="https://www.youtube.com/embed/ia2Ph61bYzc?autoplay=1&mute=0&loop=1&playlist=ia2Ph61bYzc" frameborder="0" allow="autoplay"></iframe>
