--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
   </header>
 
   <!-- Display image -->
-  <img src="https://i.imgur.com/0ZXkk0T.png" alt="Amirrul Mukminin" class="hero">
+  <img src="https://i.imgur.com/IQTD0vT.png" alt="Amirrul Mukminin" class="hero">
 
   <!-- YouTube audio-only embed -->
   <iframe width="0" height="0" src="https://www.youtube.com/embed/ia2Ph61bYzc?autoplay=1&mute=0&loop=1&playlist=ia2Ph61bYzc" frameborder="0" allow="autoplay"></iframe>
