--- a/index.html
+++ b/index.html
@@ -116,7 +116,9 @@
     img.hero {
       display: block;
       margin: 30px auto;
-      max-width: 100%;
+      width: 100%;
+      max-width: 900px;
+      height: auto;
       border-radius: 12px;
     }
   </style>
