--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
     }
     header {
       text-align: center;
-      padding: 40px 20px 10px;
+      padding: 80px 20px 0;
       position: relative;
     }
     header h1 {
       font-size: 42px;
       font-weight: 700;
-      margin: 0 0 10px;
+      margin: 0;
     }
     header p {
       font-size: 18px;
@@ -154,7 +154,6 @@
 
   <header>
     <h1>Welcome to Portfolio Amirrul Mukminin</h1>
-    <p></p>
   </header>
 
   <div class="image-container">
