--- a/index.html
+++ b/index.html
@@ -24,17 +24,22 @@
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
       background-color: var(--bg-color);
       color: var(--text-color);
-      transition: all 0.3s ease;
+      transition: background-color 0.5s ease, color 0.5s ease;
     }
-    header {
-      text-align: center;
-      padding: 100px 20px 10px;
-      position: relative;
+    .hero-bar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 40px 80px 20px;
+      background-color: var(--bg-color);
+      color: var(--text-color);
+      font-size: 32px;
+      font-weight: 600;
+      border-bottom: 6px solid #1c1c1c;
     }
-    header h1 {
-      font-size: 42px;
-      font-weight: 700;
-      margin: 0 0 10px;
+    .hero-bar span:last-child {
+      font-size: 18px;
+      font-weight: 500;
     }
     .theme-toggle {
       position: fixed;
@@ -64,7 +69,7 @@
       padding: 40px 20px;
       border-bottom: 1px solid #ccc;
       opacity: 0;
-      transform: translateY(20px);
+      transform: translateY(40px);
       transition: opacity 0.6s ease, transform 0.6s ease;
     }
     .section.visible {
@@ -146,9 +151,10 @@
 
   <button class="theme-toggle" onclick="toggleTheme()" id="themeButton">🌙</button>
 
-  <header>
-    <h1>Welcome to Portfolio Amirrul Mukminin</h1>
-  </header>
+  <div class="hero-bar">
+    <span>Amirul Mukminin</span>
+    <span>My Personal Website</span>
+  </div>
 
   <div class="image-container">
     <img id="mainImage" src="Main Photo.png" alt="Amirrul Mukminin">
