--- a/index.html
+++ b/index.html
@@ -30,17 +30,21 @@
     }
     .navbar {
       display: flex;
-      justify-content: space-between;
+      flex-direction: column;
+      justify-content: center;
       align-items: center;
       padding: 20px 40px;
       background-color: var(--bg-color);
+      text-align: center;
     }
     .navbar h1 {
       font-size: 28px;
       font-weight: bold;
     }
     .navbar p {
-      font-size: 18px;
+      font-size: 16px;
+      color: #666;
+      margin-top: 5px;
     }
     .underline {
       height: 3px;
@@ -161,7 +165,7 @@
         <p>Excel, Google Sheets, and form conversion.</p>
       </div>
       <div class="grid-item">
-        <h3>🖋️ Typing</h3>
+        <h3>✋ Typing</h3>
         <p>Fast typing (50+ WPM), accurate & clean documents.</p>
       </div>
       <div class="grid-item">
