--- a/index.html
+++ b/index.html
@@ -33,21 +33,21 @@
       display: flex;
       flex-direction: column;
       align-items: flex-start;
-      padding: 60px;
+      padding: 40px 20px;
       background-color: var(--bg-color);
     }
 
     .brand-name {
-      font-size: 42px;
+      font-size: 3.2vw;
       font-weight: 700;
       margin: 0;
       color: var(--text-color);
     }
 
     .brand-subtitle {
-      font-size: 20px;
+      font-size: 1.5vw;
       font-weight: 400;
-      margin: 4px 0 0;
+      margin: 8px 0 0;
       color: var(--text-color);
     }
 
@@ -154,6 +154,15 @@
       padding: 30px 20px;
       font-size: 14px;
       color: #86868b;
+    }
+
+    @media (max-width: 768px) {
+      .brand-name {
+        font-size: 6vw;
+      }
+      .brand-subtitle {
+        font-size: 3.8vw;
+      }
     }
   </style>
 </head>
